[package]
name = "multirun"
version = "0.2.1"
authors = ["Nico Burns <nico@nicoburns.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.1"
futures-util = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.42"
shellwords = "1.0.0"
path-clean = "0.1.0"
envsubst = "0.2.0"
