[package]
name = "multirun"
version = "0.2.1"
authors = ["Nico Burns <nico@nicoburns.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.8", features = ["io-util"] }
futures = "0.3"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellwords = "1.0.0"
path-clean = "0.1.0"
envsubst = "0.2.0"
