[package]
name = "multirun"
version = "0.3.2"
authors = ["Nico Burns <nico@nicoburns.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLI tool for running multiple commands at once and multiplexing the output"
homepage = "https://github.com/nicoburns/multirun"
documentation = "https://github.com/nicoburns/multirun"
repository = "https://github.com/nicoburns/multirun"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.8", features = ["io-util"] }
futures = "0.3"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellwords = "1.0.0"
path-clean = "0.1.0"
envsubst = "0.2.0"
